--- a/OmnieCommerceAdmin/Storyboards/SignInShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/SignInShow.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="593-QN-qcr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6uh-TR-iIl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -174,6 +174,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                                 <connections>
                                                                                     <action selector="handlerRegisterButtonTap:" destination="593-QN-qcr" eventType="touchUpInside" id="bd7-cH-djv"/>
+                                                                                    <segue destination="ikr-1L-FUH" kind="show" identifier="SegueSignUpShowVC" id="9AX-ms-ucW"/>
                                                                                 </connections>
                                                                             </button>
                                                                             <button opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZqH-Ft-3CU" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
@@ -187,6 +188,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                                 <connections>
                                                                                     <action selector="handlerForgotPasswordButtonTap:" destination="593-QN-qcr" eventType="touchUpInside" id="17a-Yc-9gw"/>
+                                                                                    <segue destination="uSt-No-fbq" kind="show" identifier="SegueForgotPasswordShowVC" id="k4H-aV-Gqh"/>
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
@@ -384,6 +386,7 @@
                             <outletCollection property="gestureRecognizers" destination="w2b-Bq-AnN" appends="YES" id="6t3-Ya-Iyc"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="cV6-cY-l07"/>
                     <connections>
                         <outlet property="nameTextField" destination="swM-42-2YU" id="XXx-f5-Ck0"/>
                         <outlet property="passwordTextField" destination="puu-bd-4T6" id="4ba-Ej-pgb"/>
@@ -398,7 +401,43 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="231.19999999999999" y="63.418290854572717"/>
+            <point key="canvasLocation" x="1170.4000000000001" y="63.418290854572717"/>
+        </scene>
+        <!--SignUpShowVC-->
+        <scene sceneID="IXl-BU-X90">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SignUpShow" referencedIdentifier="SignUpShowVC" id="ikr-1L-FUH" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="D9a-WP-886"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eiK-qG-sSI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1752" y="39.580209895052477"/>
+        </scene>
+        <!--ForgotPasswordShowVC-->
+        <scene sceneID="tPB-jN-xhk">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ForgotPasswordShow" referencedIdentifier="ForgotPasswordShowVC" id="uSt-No-fbq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aEm-DW-Dp7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1796" y="85.457271364317847"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YAe-bb-hxv">
+            <objects>
+                <navigationController storyboardIdentifier="SignInShowNC" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="6uh-TR-iIl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="w6Z-de-2vo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="593-QN-qcr" kind="relationship" relationship="rootViewController" id="Fgp-HJ-djq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rAb-Wa-RXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="369" y="63"/>
         </scene>
     </scenes>
     <resources>
