--- a/OmnieCommerceAdmin/Storyboards/SignUpShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/SignUpShow.storyboard
@@ -20,12 +20,26 @@
                     <view key="view" contentMode="scaleToFill" id="3PF-5G-ujC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K2y-nd-QAh" userLabel="Cancel Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                <rect key="frame" x="83" y="318" width="127" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Cancel"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="Border"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="handlerCancelButtonTap:" destination="bFj-L2-YSa" eventType="touchUpInside" id="KcX-Rl-oaR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fzd-xc-HhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="54"/>
+            <point key="canvasLocation" x="-156" y="53.523238380809602"/>
         </scene>
     </scenes>
 </document>
