--- a/OmnieCommerceAdmin/Storyboards/OrganizationsListShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/OrganizationsListShow.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mPM-eg-IYH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rao-N9-D5u">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Organizations List Show View Controller-->
+        <!--My organizations-->
         <scene sceneID="2HD-n5-cgO">
             <objects>
                 <viewController storyboardIdentifier="OrganizationsListShowVC" id="mPM-eg-IYH" customClass="OrganizationsListShowViewController" customModule="OmnieCommerceAdmin" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,14 +18,107 @@
                         <viewControllerLayoutGuide type="bottom" id="wFy-lZ-9Q8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uWY-od-7g5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cLS-cY-S0Z">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="YoC-yM-wVf" userLabel="Empty Data Source View">
+                                    <rect key="frame" x="0.0" y="72" width="375" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="RVF-nH-6Oa">
+                                            <rect key="frame" x="115.5" y="40" width="144" height="44"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To add organization" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NkG-aU-in2" customClass="CustomLabel" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="106" height="44"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="labelStyle" value="UbuntuLight12VeryDarkGray"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vl-WM-zRy" userLabel="Action Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                    <rect key="frame" x="114" y="0.0" width="30" height="44"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" title="Here"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="TitleUbuntuLight12UndirlineDarkCyan"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="handlerHereButtonTap:" destination="mPM-eg-IYH" eventType="touchUpInside" id="68n-BS-C4O"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="vP1-hQ-9vX"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="RVF-nH-6Oa" firstAttribute="centerX" secondItem="YoC-yM-wVf" secondAttribute="centerX" id="Anc-kd-1MH"/>
+                                        <constraint firstItem="RVF-nH-6Oa" firstAttribute="top" secondItem="YoC-yM-wVf" secondAttribute="top" constant="40" id="x43-gl-j5U"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="OrganizationCell" id="0Yc-1z-gGu">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Yc-1z-gGu" id="MOI-dm-3P0">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wFg-lT-WoP" userLabel="Add Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                <rect key="frame" x="315" y="543" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="XRJ-jn-d7z"/>
+                                    <constraint firstAttribute="width" constant="50" id="sDl-ut-XPd"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cLS-cY-S0Z" secondAttribute="bottom" id="AyO-32-QqD"/>
+                            <constraint firstItem="wFy-lZ-9Q8" firstAttribute="top" secondItem="wFg-lT-WoP" secondAttribute="bottom" constant="10" id="QkS-Xa-MJW"/>
+                            <constraint firstAttribute="trailing" secondItem="cLS-cY-S0Z" secondAttribute="trailing" id="cgi-F5-KRK"/>
+                            <constraint firstItem="cLS-cY-S0Z" firstAttribute="leading" secondItem="uWY-od-7g5" secondAttribute="leading" id="htM-oO-Qq6"/>
+                            <constraint firstAttribute="trailing" secondItem="wFg-lT-WoP" secondAttribute="trailing" constant="10" id="rU7-dI-aj8"/>
+                            <constraint firstItem="cLS-cY-S0Z" firstAttribute="top" secondItem="QOM-8h-dob" secondAttribute="bottom" id="rXG-Kk-Tq4"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="My organizations" id="s8K-sR-KyL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AOp-za-WzR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="142" y="158"/>
+            <point key="canvasLocation" x="1080.8" y="157.87106446776613"/>
+        </scene>
+        <!--Base Navigation Controller-->
+        <scene sceneID="Mjo-Hn-5At">
+            <objects>
+                <navigationController storyboardIdentifier="OrganizationsListNC" automaticallyAdjustsScrollViewInsets="NO" id="rao-N9-D5u" customClass="BaseNavigationController" customModule="OmnieCommerceAdmin" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="Hdy-nr-g7r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mPM-eg-IYH" kind="relationship" relationship="rootViewController" id="f2k-M0-pip"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pcs-sf-ZYU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="258" y="158"/>
         </scene>
     </scenes>
 </document>
