--- a/OmnieCommerceAdmin/Storyboards/OrganizationsListShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/OrganizationsListShow.storyboard
@@ -41,7 +41,7 @@
                                                         <userDefinedRuntimeAttribute type="string" keyPath="labelStyle" value="UbuntuLight12VeryDarkGray"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </label>
-                                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vl-WM-zRy" userLabel="Action Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                <button opaque="NO" clipsSubviews="YES" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vl-WM-zRy" userLabel="Action Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
                                                     <rect key="frame" x="114" y="0.0" width="30" height="44"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <state key="normal" title="Here"/>
@@ -77,13 +77,17 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wFg-lT-WoP" userLabel="Add Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                            <button opaque="NO" clipsSubviews="YES" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wFg-lT-WoP" userLabel="Add Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
                                 <rect key="frame" x="315" y="543" width="50" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="XRJ-jn-d7z"/>
                                     <constraint firstAttribute="width" constant="50" id="sDl-ut-XPd"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" image="image-add-organization-normal"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="CircleFill"/>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -121,4 +125,7 @@
             <point key="canvasLocation" x="258" y="158"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image-add-organization-normal" width="22" height="19"/>
+    </resources>
 </document>
